syntax = "proto3";
package base_rpc;
option go_package = "go_video_streamer/internal/base_rpc;base_rpc";

message NewStream {
  string name = 1;
  float fps = 2;
  uint32 width = 3;
  uint32 height = 4;
  uint32 streamType = 5;
}

message RemoveStream {
  string name = 1;
}

message DeletionCause {
    uint64 target_frames = 1;
}

message DelayedRemoveStream {
  string name = 1;
  DeletionCause cause = 2;
}
